fix(react): wrong alignment with button icon only and danger--ghost kind

--- a/packages/styles/scss/components/button/_button.scss
+++ b/packages/styles/scss/components/button/_button.scss
@@ -277,10 +277,6 @@
         $button-danger-active
       );
 
-      padding-inline-end: calc(
-        layout.density('padding-inline') - convert.to-rem(1px)
-      );
-
       .#{$prefix}--btn__icon {
         position: static;
         margin-inline-start: $spacing-03;
